@@ -32,9 +32,8 @@ import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -58,19 +57,19 @@ public class FileStreamSinkTaskTest {
 
     @Test
     public void testPutFlush() {
-        HashMap<TopicPartition, OffsetAndMetadata> offsets = new HashMap<>();
+        Map<TopicPartition, OffsetAndMetadata> offsets = new HashMap<>();
         final String newLine = System.lineSeparator();
 
         // We do not call task.start() since it would override the output stream
 
-        task.put(Collections.singletonList(
+        task.put(List.of(
                 new SinkRecord("topic1", 0, null, null, Schema.STRING_SCHEMA, "line1", 1)
         ));
         offsets.put(new TopicPartition("topic1", 0), new OffsetAndMetadata(1L));
         task.flush(offsets);
         assertEquals("line1" + newLine, os.toString());
 
-        task.put(Arrays.asList(
+        task.put(List.of(
                 new SinkRecord("topic1", 0, null, null, Schema.STRING_SCHEMA, "line2", 2),
                 new SinkRecord("topic2", 0, null, null, Schema.STRING_SCHEMA, "line3", 1)
         ));
@@ -88,7 +87,7 @@ public class FileStreamSinkTaskTest {
         task.start(props);
 
         HashMap<TopicPartition, OffsetAndMetadata> offsets = new HashMap<>();
-        task.put(Collections.singletonList(
+        task.put(List.of(
                 new SinkRecord("topic1", 0, null, null, Schema.STRING_SCHEMA, "line0", 1)
         ));
         offsets.put(new TopicPartition("topic1", 0), new OffsetAndMetadata(1L));
@@ -99,7 +98,7 @@ public class FileStreamSinkTaskTest {
         int i = 0;
         try (BufferedReader reader = Files.newBufferedReader(Paths.get(outputFile))) {
             lines[i++] = reader.readLine();
-            task.put(Arrays.asList(
+            task.put(List.of(
                     new SinkRecord("topic1", 0, null, null, Schema.STRING_SCHEMA, "line1", 2),
                     new SinkRecord("topic2", 0, null, null, Schema.STRING_SCHEMA, "line2", 1)
             ));
